sifc test checking priorities from xml

--- a/src/Makefile
+++ b/src/Makefile
@@ -185,7 +185,8 @@ sprout_test_SOURCES := ${SPROUT_COMMON_SOURCES} \
                        authenticationsproutlet.cpp \
                        forwardingsproutlet.cpp \
                        pthread_cond_var_helper.cpp \
-                       sifcservice_test.cpp
+                       sifcservice_test.cpp \
+                       mock_sifc_parser.cpp
 
 COVERAGE_ROOT := ..
 sprout_test_COVERAGE_EXCLUSIONS := ^src/ut|^usr|^modules/gmock|^modules/cpp-common|^modules/rapidjson|^include|^src/mangelwurzel/ut|^modules/gemini/src/ut|^modules/gemini/include|^modules/memento-as/modules|^modules/memento-as/src/ut|^modules/memento-as/include
