Add MMFConfig class, add mmfservice to Makefile, and fix ENT logs

--- a/src/Makefile
+++ b/src/Makefile
@@ -91,7 +91,8 @@ SPROUT_COMMON_SOURCES := logger.cpp \
                          ifc.cpp \
                          associated_uris.cpp \
                          sifcservice.cpp \
-                         difcservice.cpp
+                         difcservice.cpp \
+                         mmfservice.cpp
 
 sprout_SOURCES := ${SPROUT_COMMON_SOURCES} \
                   snmp_counter_table.cpp \
@@ -189,7 +190,8 @@ sprout_test_SOURCES := ${SPROUT_COMMON_SOURCES} \
                        pthread_cond_var_helper.cpp \
                        sifcservice_test.cpp \
                        mock_sifc_parser.cpp \
-                       difcservice_test.cpp
+                       difcservice_test.cpp \
+                       mmfservice.cpp
 
 COVERAGE_ROOT := ..
 sprout_test_COVERAGE_EXCLUSIONS := ^src/ut|^usr|^modules/gmock|^modules/cpp-common|^modules/rapidjson|^include|^src/mangelwurzel/ut|^modules/gemini/src/ut|^modules/gemini/include|^modules/memento-as/modules|^modules/memento-as/src/ut|^modules/memento-as/include
