--- a/src/Makefile
+++ b/src/Makefile
@@ -190,8 +190,7 @@ sprout_test_SOURCES := ${SPROUT_COMMON_SOURCES} \
                        pthread_cond_var_helper.cpp \
                        sifcservice_test.cpp \
                        mock_sifc_parser.cpp \
-                       difcservice_test.cpp \
-                       mmfservice.cpp
+                       difcservice_test.cpp
 
 COVERAGE_ROOT := ..
 sprout_test_COVERAGE_EXCLUSIONS := ^src/ut|^usr|^modules/gmock|^modules/cpp-common|^modules/rapidjson|^include|^src/mangelwurzel/ut|^modules/gemini/src/ut|^modules/gemini/include|^modules/memento-as/modules|^modules/memento-as/src/ut|^modules/memento-as/include
