Add AS latency stats to Sprout
The latency is tracked between sending a request to the AS and getting the
request sent back.

If an AS doesn't send the request back, we don't track the latency.

This doesn't work for ASs that fork requests, but the aschain doesn't currently
work for that either.

--- a/src/Makefile
+++ b/src/Makefile
@@ -93,7 +93,8 @@ SPROUT_COMMON_SOURCES := logger.cpp \
                          sifcservice.cpp \
                          fifcservice.cpp \
                          mmfservice.cpp \
-                         mmftargets.cpp
+                         mmftargets.cpp \
+                         event_statistic_accumulator.cpp
 
 sprout_SOURCES := ${SPROUT_COMMON_SOURCES} \
                   snmp_counter_table.cpp \
@@ -104,6 +105,7 @@ sprout_SOURCES := ${SPROUT_COMMON_SOURCES} \
                   snmp_event_accumulator_table.cpp \
                   snmp_event_accumulator_by_scope_table.cpp \
                   snmp_scalar_by_scope_table.cpp \
+                  snmp_time_and_string_based_event_table.cpp \
                   main.cpp
 
 sprout_test_SOURCES := ${SPROUT_COMMON_SOURCES} \
