Fix up UTs for refactored impistore

--- a/src/Makefile
+++ b/src/Makefile
@@ -139,7 +139,7 @@ sprout_test_SOURCES := ${SPROUT_COMMON_SOURCES} \
                        xdmconnection_test.cpp \
                        enumservice_test.cpp \
                        subscriber_data_manager_test.cpp \
-                       impistore_test.cpp \
+                       astaire_impistore_test.cpp \
                        registrar_test.cpp \
                        bono_test.cpp \
                        bgcfservice_test.cpp \
