Use target-specific exclusions

--- a/src/Makefile
+++ b/src/Makefile
@@ -317,6 +317,9 @@ VPATH = ../modules/cpp-common/src ../modules/cpp-common/test_utils ../modules/ap
 # Use valgrind suppression file for UT
 sprout_test_VALGRIND_ARGS := --suppressions=ut/sprout_test.supp
 
+# Exclude the Bono tests from valgrind unless SLOW is set
+sprout_test_VALGRIND_EXCL = $(if ${SLOW},,Stateful*Proxy*Test.*)
+
 include ../build-infra/cpp.mk
 
 # Special extra objects for sprout_test
