--- a/src/Makefile
+++ b/src/Makefile
@@ -209,7 +209,8 @@ sprout_test_SOURCES := ${SPROUT_COMMON_SOURCES} \
                        scscf_utils.cpp \
                        test_interposer.cpp \
                        curl_interposer.cpp \
-                       testingcommon.cpp
+                       testingcommon.cpp \
+                       thread_dispatcher_test.cpp
 
 COVERAGE_ROOT := ..
 sprout_test_COVERAGE_EXCLUSIONS := ^src/ut|^usr|^modules/gmock|^modules/cpp-common|^modules/rapidjson|^include|^src/mangelwurzel/ut|^modules/gemini/src/ut|^modules/gemini/include|^modules/memento-as/modules|^modules/memento-as/src/ut|^modules/memento-as/include
