Link with boost locale (#2034)

--- a/src/Makefile
+++ b/src/Makefile
@@ -255,6 +255,7 @@ SPROUT_COMMON_LDFLAGS := -rdynamic \
                          -lz \
                          -lpthread \
                          -lboost_filesystem \
+                         -lboost_locale \
                          `net-snmp-config --netsnmp-agent-libs`
 
 # Explicitly link some pjsip modules. Some plugins require symbols in them
