make full_test pass

--- a/src/Makefile
+++ b/src/Makefile
@@ -122,6 +122,7 @@ sprout_test_SOURCES := ${SPROUT_COMMON_SOURCES} \
                        subscriptionsproutlet.cpp \
                        registrarsproutlet.cpp \
                        sproutletappserver.cpp \
+                       hss_cache_helper.cpp \
                        mmtel.cpp \
                        test_main.cpp \
                        fakecurl.cpp \
