--- a/src/Makefile
+++ b/src/Makefile
@@ -102,7 +102,9 @@ SPROUT_COMMON_SOURCES := logger.cpp \
                          astaire_aor_store.cpp \
                          sprout_xml_utils.cpp \
                          rphservice.cpp \
-                         s4.cpp
+                         s4.cpp \
+                         s4_handlers.cpp \
+                         s4_chronoshandlers.cpp
 
 sprout_SOURCES := ${SPROUT_COMMON_SOURCES} \
                   snmp_counter_table.cpp \
