--- a/src/Makefile
+++ b/src/Makefile
@@ -208,7 +208,7 @@ sprout_test_SOURCES := ${SPROUT_COMMON_SOURCES} \
                        mock_s4.cpp
 
 COVERAGE_ROOT := ..
-sprout_test_COVERAGE_EXCLUSIONS := ^src/ut|^usr|^modules/gmock|^modules/cpp-common|^modules/rapidjson|^include|^src/mangelwurzel/ut|^modules/gemini/src/ut|^modules/gemini/include
+sprout_test_COVERAGE_EXCLUSIONS := ^src/ut|^usr|^modules/gmock|^modules/cpp-common|^modules/rapidjson|^include|^src/mangelwurzel/ut|^modules/gemini/src/ut|^modules/gemini/include|^modules/clearwater-s4/src/ut
 
 SPROUT_COMMON_CPPFLAGS := -Wno-write-strings \
                           -I../include \
