Change interface to notify sender

--- a/src/Makefile
+++ b/src/Makefile
@@ -58,7 +58,6 @@ SPROUT_COMMON_SOURCES := logger.cpp \
                          signalhandler.cpp \
                          health_checker.cpp \
                          notify_sender.cpp \
-                         notify_utils.cpp \
                          unique.cpp \
                          chronosconnection.cpp \
                          accesslogger.cpp \
@@ -206,7 +205,8 @@ sprout_test_SOURCES := ${SPROUT_COMMON_SOURCES} \
                        s4_test.cpp \
                        mock_s4.cpp \
                        s4_chronoshandlers_test.cpp \
-                       sprout_xml_utils_test.cpp
+                       sprout_xml_utils_test.cpp \
+                       mock_notify_sender.cpp
 
 COVERAGE_ROOT := ..
 sprout_test_COVERAGE_EXCLUSIONS := ^src/ut|^usr|^modules/gmock|^modules/cpp-common|^modules/rapidjson|^include|^src/mangelwurzel/ut|^modules/gemini/src/ut|^modules/gemini/include|^modules/clearwater-s4/src/ut
