put functions back into sproutlet

--- a/src/Makefile
+++ b/src/Makefile
@@ -126,7 +126,6 @@ sprout_test_SOURCES := ${SPROUT_COMMON_SOURCES} \
                        subscriptionsproutlet.cpp \
                        registrarsproutlet.cpp \
                        sproutletappserver.cpp \
-                       hss_cache_helper.cpp \
                        mmtel.cpp \
                        test_main.cpp \
                        fakecurl.cpp \
@@ -299,7 +298,7 @@ sprout_mmtel_as.so_SOURCES := mmtel.cpp sproutletappserver.cpp mmtelasplugin.cpp
 sprout_mmtel_as.so_CPPFLAGS := ${PLUGIN_COMMON_CPPFLAGS} -Wno-write-strings
 sprout_mmtel_as.so_LDFLAGS := ${PLUGIN_COMMON_LDFLAGS}
 
-sprout_scscf.so_SOURCES := authenticationsproutlet.cpp registrarsproutlet.cpp subscriptionsproutlet.cpp scscfsproutlet.cpp scscfplugin.cpp scscf_utils.cpp hss_cache_helper.cpp
+sprout_scscf.so_SOURCES := authenticationsproutlet.cpp registrarsproutlet.cpp subscriptionsproutlet.cpp scscfsproutlet.cpp scscfplugin.cpp scscf_utils.cpp
 sprout_scscf.so_CPPFLAGS := ${PLUGIN_COMMON_CPPFLAGS}
 sprout_scscf.so_LDFLAGS := ${PLUGIN_COMMON_LDFLAGS}
 
