--- a/src/Makefile
+++ b/src/Makefile
@@ -211,7 +211,8 @@ sprout_test_SOURCES := ${SPROUT_COMMON_SOURCES} \
                        notify_sender_test.cpp \
                        mock_notify_sender.cpp \
                        registration_sender_test.cpp \
-                       mock_registration_sender.cpp
+                       mock_registration_sender.cpp \
+                       sprout_fv_test.cpp
 
 COVERAGE_ROOT := ..
 sprout_test_COVERAGE_EXCLUSIONS := ^src/ut|^usr|^modules/gmock|^modules/cpp-common|^modules/rapidjson|^include|^src/mangelwurzel/ut|^modules/gemini/src/ut|^modules/gemini/include|^modules/clearwater-s4/src/ut|^modules/app-servers/include/|modules/app-servers/test/
