--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-TARGETS := sprout call-diversion-as.so gemini-as.so sprout_bgcf.so sprout_icscf.so sprout_mmtel_as.so sprout_scscf.so mangelwurzel-as.so # sprout_io_trap.so - disabled as it breaks static analysis
+TARGETS := sprout call-diversion-as.so sprout_bgcf.so sprout_icscf.so sprout_mmtel_as.so sprout_scscf.so mangelwurzel-as.so # sprout_io_trap.so - disabled as it breaks static analysis
 
 TEST_TARGETS := sprout_test
 
@@ -122,7 +122,6 @@ sprout_SOURCES := ${SPROUT_COMMON_SOURCES} \
 
 sprout_test_SOURCES := ${SPROUT_COMMON_SOURCES} \
                        mangelwurzel.cpp \
-                       mobiletwinned.cpp \
                        scscfsproutlet.cpp \
                        icscfsproutlet.cpp \
                        bgcfsproutlet.cpp \
@@ -174,7 +173,6 @@ sprout_test_SOURCES := ${SPROUT_COMMON_SOURCES} \
                        scscf_test.cpp \
                        sproutletproxy_test.cpp \
                        gruu_test.cpp \
-                       mobiletwinned_test.cpp \
                        mangelwurzel_test.cpp \
                        common_sip_processing_test.cpp \
                        fakesnmp.cpp \
@@ -217,7 +215,7 @@ sprout_test_SOURCES := ${SPROUT_COMMON_SOURCES} \
                        sprout_fv_test.cpp
 
 COVERAGE_ROOT := ..
-sprout_test_COVERAGE_EXCLUSIONS := ^src/ut|^usr|^modules/gmock|^modules/cpp-common|^modules/rapidjson|^include|^src/mangelwurzel/ut|^modules/gemini/src/ut|^modules/gemini/include|^modules/clearwater-s4/src/ut|^modules/app-servers/include/|modules/app-servers/test/
+sprout_test_COVERAGE_EXCLUSIONS := ^src/ut|^usr|^modules/gmock|^modules/cpp-common|^modules/rapidjson|^include|^src/mangelwurzel/ut|^modules/clearwater-s4/src/ut|^modules/app-servers/include/|modules/app-servers/test/
 
 SPROUT_COMMON_CPPFLAGS := -Wno-write-strings \
                           -I../include \
@@ -233,7 +231,6 @@ sprout_test_CPPFLAGS := ${SPROUT_COMMON_CPPFLAGS} \
                         -I../modules/clearwater-s4/src/ut \
                         -I../modules/sipp \
                         -I../modules/app-servers/test \
-                        -I../modules/gemini/include \
                         -I../include/mangelwurzel \
                         -Iut \
                         -DGTEST_USE_OWN_TR1_TUPLE=0
@@ -286,10 +283,6 @@ PLUGIN_COMMON_CPPFLAGS := -fPIC \
                           `PKG_CONFIG_PATH=../usr/lib/pkgconfig pkg-config --cflags libpjproject`
 PLUGIN_COMMON_LDFLAGS := -shared -L../usr/lib
 
-gemini-as.so_SOURCES := mobiletwinned.cpp sproutletappserver.cpp geminiasplugin.cpp
-gemini-as.so_CPPFLAGS := ${PLUGIN_COMMON_CPPFLAGS} -I../modules/gemini/include
-gemini-as.so_LDFLAGS := ${PLUGIN_COMMON_LDFLAGS}
-
 call-diversion-as.so_SOURCES := mmtel.cpp sproutletappserver.cpp cdivasplugin.cpp
 call-diversion-as.so_CPPFLAGS := ${PLUGIN_COMMON_CPPFLAGS} -Wno-write-strings
 call-diversion-as.so_LDFLAGS := ${PLUGIN_COMMON_LDFLAGS}
@@ -318,7 +311,7 @@ sprout_io_trap.so_SOURCES := io_trap.cpp
 sprout_io_trap.so_CPPFLAGS := -fPIC -I../modules/cpp-common/include
 sprout_io_trap.so_LDFLAGS := -shared
 
-VPATH = ../modules/cpp-common/src ../modules/clearwater-s4/src ../modules/clearwater-s4/src/ut ../modules/cpp-common/test_utils ../modules/app-servers/test ../modules/gemini/src ../modules/gemini/src/ut mangelwurzel mangelwurzel/ut ut
+VPATH = ../modules/cpp-common/src ../modules/clearwater-s4/src ../modules/clearwater-s4/src/ut ../modules/cpp-common/test_utils ../modules/app-servers/test mangelwurzel mangelwurzel/ut ut
 
 # Use valgrind suppression file for UT
 sprout_test_VALGRIND_ARGS := --suppressions=ut/sprout_test.supp
